force-app/main/default/objects/Location_Address_Book__c/Location_Address_Book__c.object-meta.xml
<CustomObject>
    <description>Address Book</description>
    <label>Location Address Book</label>
    <nameField>
        <label>Location of Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations Address Books</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>