force-app/main/default/objects/Location_Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <inlineHelpText>Enter the city</inlineHelpText>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>