force-app/main/default/objects/Location_Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Landmark</description>
    <inlineHelpText>Enter the LandMark</inlineHelpText>
    <label>Landmark</label>
    <length>20</length>
    <type>Text</type>
</CustomField>