force-app/main/default/objects/Location_Address_Book__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal Code</description>
    <inlineHelpText>Enter the Postal Code</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>