force-app/main/default/objects/Location_Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <inlineHelpText>Enter the state</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>