force-app/main/default/objects/Location_Address_Book__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Enter the street</description>
    <inlineHelpText>Street</inlineHelpText>
    <label>Street</label>
    <length>20</length>
    <type>Text</type>
</CustomField>