force-app/main/default/objects/Location_Address_Book__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>whether verified or not</description>
    <inlineHelpText>whether verified or not</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>